--- a/public/view/remote-vehicle.html
+++ b/public/view/remote-vehicle.html
@@ -1,3 +1,8 @@
 <section id="remote" class="slide">
-			<h1>Remote cars</h1>
+	<div id="page-heading">
+		<h3 class="page-title">Remote vehicle</h3>
+	</div>
+	<section class="container">
+		
+	</section>
 </section>
