--- a/public/view/vehicle.html
+++ b/public/view/vehicle.html
@@ -1,3 +1,10 @@
 <section id="vehicle"class="slide">
-			<h1>Register vehicle</h1>
+	<div id="page-heading">
+		<h3 class="page-title">Register vehicle</h3>
+	</div>
+	<section class="container">
+		<form>
+			<label>Modelo </label>
+		</form>
+	</section>
 </section>
