--- a/public/view/map.html
+++ b/public/view/map.html
@@ -1,3 +1,6 @@
 <section class="slide">
+	<div id="page-heading">
+			<h3 class="page-title">Ubicación</h3>
+	</div>
 	<my-maps id="map-canvas"></my-maps>
 </section>
