--- a/public/view/remote-vehicle.html
+++ b/public/view/remote-vehicle.html
@@ -1,8 +1,48 @@
 <section id="remote" class="slide">
 	<div id="page-heading">
-		<h3 class="page-title">Remote vehicle</h3>
+			<h3 class="page-title">Control Vehículos</h3>
 	</div>
-	<section class="container">
-		
+	<section>
+			<table class="table table-striped">
+				<tbody>
+				  <!-- Aplicadas en las filas -->
+				  <th>#</th>
+				  <th>Vehiculo</th>
+				  <th>Enceder</th>
+				  <th>Apagar</th>
+				 
+				  <!-- Aplicadas en las celdas (<td> o <th>) -->
+				  <tr>
+				  	<td>1</td>
+				    <td>Vehiculo</td>
+				    <td><button class="btn btn-success">Encender</button></td>
+				    <td><button class="btn btn-warning">Apagar</button></td>
+				  </tr>
+				  <tr>
+				  	<td>2</td>
+				    <td>Vehiculo</td>
+				    <td><button class="btn btn-success">Encender</button></td>
+				    <td><button class="btn btn-warning">Apagar</button></td>
+				  </tr>
+				  <tr>
+				  	<td>3</td>
+				    <td>Vehiculo</td>
+				    <td><button class="btn btn-success">Encender</button></td>
+				    <td><button class="btn btn-warning">Apagar</button></td>
+				  </tr>
+				  <tr>
+				  	<td>4</td>
+				    <td>Vehiculo</td>
+				    <td><button class="btn btn-success">Encender</button></td>
+				    <td><button class="btn btn-warning">Apagar</button></td>
+				  </tr>
+				  <tr>
+				  	<td>5</td>
+				    <td>Vehiculo</td>
+				    <td><button class="btn btn-success">Encender</button></td>
+				    <td><button class="btn btn-warning">Apagar</button></td>
+				  </tr>
+				</tbody>
+			</table>
 	</section>
 </section>
