--- a/public/view/vehicle.html
+++ b/public/view/vehicle.html
@@ -1,10 +1,28 @@
-<section id="vehicle"class="slide">
+<section id="vehicle" class="slide">
 	<div id="page-heading">
-		<h3 class="page-title">Register vehicle</h3>
+			<h3 class="page-title">Administrar Vehículos</h3>
 	</div>
-	<section class="container">
+	<section class="col-md-4 regiter-vehicle">
 		<form>
-			<label>Modelo </label>
+			<div class="form-group">
+				<label>Modelo </label>
+				<input class="form-control" placeholder="Modelo">
+			</div>
+			<div class="form-group">
+				<label>Placa</label>
+				<input class="form-control" placeholder="Placa">
+			</div>
+			<button type="submit" class="btn btn-default">Agregar</button>
+			<button class="btn btn-default">Eliminar</button>
 		</form>
+	</section>
+	<section class="col-md-4 sect-vehicle">
+		<ul class="list-vehicle">
+			<li><a>Vehiculo 1</a><span class="icon-rubbish"><img src="./img/rubbish12.png"></span></li>
+			<li><a>Vehiculo 2</a><span class="icon-rubbish"><img src="./img/rubbish12.png"></span></span></li>
+			<li><a>Vehiculo 3</a><span class="icon-rubbish"><img src="./img/rubbish12.png"></span></li>
+			<li><a>Vehiculo 4</a><span class="icon-rubbish"><img src="./img/rubbish12.png"></span></li>
+			<li><a>Vehiculo 5</a><span class="icon-rubbish"><img src="./img/rubbish12.png"></span></li>
+		</ul>
 	</section>
 </section>
