--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ a{
 	width: 100%;
 }
 .data-list{
-  height: 500px;
+  height: 77%;
   overflow-y: scroll;
 }
 /*
@@ -56,11 +56,10 @@ a{
 * Style Search
 */
 .search{
-	margin-left: 0.9px;
 	padding:8px 15px;
     background: #e8e8e8;
     border:0px solid #dbdbdb;
-    width: 135px;
+    width: 67%;
 }
 .btn-search{
 	position:relative;
@@ -99,3 +98,4 @@ a{
 }
 #footer{
 	background-color:#f5f5f5;
+}
