--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,7 @@ a{
 #style-3::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	-moz-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
 }
 
@@ -52,6 +53,7 @@ a{
 {
 	background-color: #b0b0b0;
 }
+
 /*
 * Style Search
 */
@@ -98,4 +100,31 @@ a{
 }
 #footer{
 	background-color:#f5f5f5;
+}
+
+.black_overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index:1001;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+
+.white_content {
+	display: none;
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	width: 50%;
+	height: 50%;
+	padding: 16px;
+	background-color: #e8e8e8;
+	z-index:1002;
+	overflow: auto;
 }
