--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,10 @@
     text-shadow: 0 1px rgba(0,0,0,0.3);
     background-color: #5E9C06; 
   }
+  #lightreg{
+    overflow-y:hidden; 
+    height: 50% 
+  }
   #map-canvas{
     width: 100%;
     height: 100%;
@@ -212,6 +216,10 @@
   }
   .white_content a{
     float: right;
+    opacity: 0.65;
+  }
+  .white_content a:hover{
+    opacity: 0.85;
   }
   .white_content h1{
     text-align: center;
