--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,17 +9,22 @@
 /**
 * LABELS
 */
+
   body{
   	background: #fff;
   	font-family: 'Open Sans Condensed', sans-serif;
   	width: 100%;
   	height: 100%;
+    -webkit-backface-visibility:hidden;
   }
   header{
   	background-color: #009AE5;
   	overflow: hidden;
   	height: 50px;
   	width: 100%;
+  }
+  html{
+    -webkit-backface-visibility:hidden;
   }
   input[type=number]::-webkit-outer-spin-button,
   input[type=number]::-webkit-inner-spin-button {
@@ -54,7 +59,7 @@
   }
   #lightreg{
     overflow-y:hidden; 
-    height: 50% 
+    height: 50%; 
   }
   #map-canvas{
     width: 100%;
@@ -233,3 +238,6 @@
     height: 100%;
     width: 100%;
   }
+  /**
+  * dialog
+  */
