Animacion de los dialogos
Se realizo la animacion de los dialogos usando solo las clases
necesarias de Animate.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,5 +277,41 @@
     width: 100%;
   }
   /**
-  * dialog
+  * dialog's animation
   */
+  .animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+.zoomIn {
+  -webkit-animation-name: zoomIn;
+  -vendor-animation-duration: 0s;
+
+  animation-name: zoomIn;
+}
+  @-webkit-keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(.3, .3, .3);
+    transform: scale3d(.3, .3, .3);
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(.3, .3, .3);
+    -ms-transform: scale3d(.3, .3, .3);
+    transform: scale3d(.3, .3, .3);
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
